Add creating and buying bonus features.

--- a/Gamification/Gamification/Gamification/ClientApp/src/app/assets/locale/en.json
+++ b/Gamification/Gamification/Gamification/ClientApp/src/app/assets/locale/en.json
@@ -14,7 +14,9 @@
     "Name": "Name",
     "Description": "Description",
     "Price": "Price",
-    "TimeLimit": "Time limit", 
+    "TimeLimit": "Time limit",
+    "Amount": "Amount",
+    "Buy": "Buy",
     "Supplier": "Supplier",
     "Create": "Create",
     "Menu": "Menu",
