--- a/Gamification/Gamification/Gamification/ClientApp/src/app/assets/locale/ua.json
+++ b/Gamification/Gamification/Gamification/ClientApp/src/app/assets/locale/ua.json
@@ -15,6 +15,8 @@
     "Description": "Опис",
     "Price": "Ціна",
     "TimeLimit": "Ліміт часу",
+    "Amount": "Кількість",
+    "Buy": "Придбати",
     "Supplier": "Постачальник",
     "Create": "Створити",
     "Menu": "Меню",
