Add features to view active and inactive tasks.

--- a/Gamification/Gamification/Gamification/ClientApp/src/app/assets/locale/en.json
+++ b/Gamification/Gamification/Gamification/ClientApp/src/app/assets/locale/en.json
@@ -17,6 +17,8 @@
     "TimeLimit": "Time limit",
     "Amount": "Amount",
     "Buy": "Buy",
+    "Activate": "Activate",
+    "Remove": "Remove",
     "Supplier": "Supplier",
     "Create": "Create",
     "Menu": "Menu",
