--- a/Gamification/Gamification/Gamification/ClientApp/src/app/assets/locale/ua.json
+++ b/Gamification/Gamification/Gamification/ClientApp/src/app/assets/locale/ua.json
@@ -17,6 +17,8 @@
     "TimeLimit": "Ліміт часу",
     "Amount": "Кількість",
     "Buy": "Придбати",
+    "Activate": "Активувати",
+    "Remove": "Видалити",
     "Supplier": "Постачальник",
     "Create": "Створити",
     "Menu": "Меню",
